--- a/Impact_model_method/TotalP_external_all.Rmd
+++ b/Impact_model_method/TotalP_external_all.Rmd
@@ -7,8 +7,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-The purpose of this program is to calculate total external P load from both 
-atmospheric deposition and stream inflows.
+The purpose of this program is to calculate total external P load from both atmospheric deposition and stream inflows.
 
 # Step 1. Load dependent packages and data needed:
 
@@ -31,17 +30,25 @@ atm<- read.csv(file="Cleaned_data/TotalP_atm.csv")
 
 Data loaded.
 
-# Step 2. Define and merge data:
+# Step 2. Define, filter, and merge data:
 
-a) defining data...
+a) defining and filtering data...
 
 ```{r}
 streams2<- streams %>%
   mutate(X=NULL, #remove index column
-         sampledate=as.Date(sampledate, origin="1899-12-30"))#reformat date
+         sampledate=as.Date(sampledate, origin="1899-12-30"),
+         Pstreams_kgday=allInflows_TotP_kgday) %>%#reformat date
+  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
+  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
+  select(c("sampledate", "Pstreams_kgday")) #remove the extra columns
 atm2<- atm %>%
   mutate(X=NULL, #remove index column
-         sampledate=as.Date(sampledate, origin="1899-12-30")) #reformat date
+         sampledate=as.Date(sampledate, origin="1899-12-30"),
+         Patm_kgday=atm_TotP_kgday)%>% #reformat date
+  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
+  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
+  select(c("sampledate", "Patm_kgday")) #remove the extra columns
 ```
 
 Data defined
@@ -49,148 +56,124 @@ Data defined
 b) merging data...
 
 ```{r}
-extP_load<- merge(atm2, streams2, by="sampledate") #adds two data files together
+extP_load<- merge(atm2, streams2, by=c("sampledate")) #adds two data files together
 extP_load <- extP_load %>%
-  mutate(total=(atm_TotP_kgday + allInflows_TotP_kgday), #combine atm P and stream P
-         other_kgday=(total*.47), #assign new column for P_other with 47% of total
-         total=total*1.47, #increase P_ext 47% to account for P_other
-         daynum=as.integer(format(sampledate, "%j")),
-         Yr=as.integer(format(sampledate, "%Y")),
-         daynum.x=NULL, Yr.x=NULL, daynum.y=NULL, Yr.y=NULL #remove duplicate columns
-         ) #remove duplicate column
+  mutate(Pext_kgday_noother=(Patm_kgday + Pstreams_kgday), #combine atm P and stream P
+         Pother_kgday=(Pext_kgday_noother*.47), #assign new column for P_other with 47% of total
+         Pext_kgday=Pext_kgday_noother*1.47) #increase P_ext 47% to account for P_other
 ```
 
 External P loading merged.
 
-# Step 3. Summarize and view data:
+# Step 3. Save data as new data file:
+
+```{r}
+write.csv(extP_load, file="Cleaned_data/TotalP_allext.csv")
+```
+
+New data file created with total external P loading.
+
+# Step 4. Summarize and view data:
 
 a) plot total P load for CyanoHAB season by source for each year...
+
 ```{r}
 extP_load_long<- melt(extP_load, #the table you want to reshape wide to long
                id.vars=c("sampledate"), #the column to use as unique id
-               measure.vars=c("atm_TotP_kgday","allInflows_TotP_kgday", "other_kgday"), 
+               measure.vars=c("Patm_kgday","Pstreams_kgday", "Pother_kgday", "Pext_kgday_noother","Pext_kgday"), 
                #the columns where values will be taken
                variable.name="Source", #label the source of P loading
-               value.name="TotP_kgday" #label the value with units
+               value.name="Pext_kgday" #label the value with units
                )
 extP_load_long$Source<-as.character(extP_load_long$Source) #tell R character data held
-extP_load_long$Source[extP_load_long$Source=="atm_TotP_kgday"] <- "atmosphere"
-extP_load_long$Source[extP_load_long$Source=="allInflows_TotP_kgday"] <- "streams"
-extP_load_long$Source[extP_load_long$Source=="other_kgday"] <- "other"
+extP_load_long<- extP_load_long %>%
+  filter(Source==c("Patm_kgday", "Pstreams_kgday", "Pother_kgday")) #remove totals here first)
+unique(extP_load_long$Source) #check totals were removed
+extP_load_long$Source[extP_load_long$Source=="Patm_kgday"] <- "atmosphere"
+extP_load_long$Source[extP_load_long$Source=="Pstreams_kgday"] <- "streams"
+extP_load_long$Source[extP_load_long$Source=="Pother_kgday"] <- "other"
 
 extP_load_long<- extP_load_long %>%
-  mutate(Yr=format(sampledate, "%Y"), #add year back in data frame
-         daynum=format(sampledate, "%j")) %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
+  mutate(Yr=as.character(format(sampledate, "%Y")))%>%  #add year back in data frame
   group_by(Yr, Source) %>% #for each year and each source
-  summarize(TotP_kgday=sum(TotP_kgday)) #sum up all the TotP_kgday
-
-write.csv(extP_load_long, file="Products/Figure8_data.csv") #saves data table
-fig8<- ggplot(extP_load_long, aes(x=Yr, y=TotP_kgday, 
+  summarize(TotPext_kgday=sum(Pext_kgday)) %>% #sum up all source Pext_kgday 
+  ungroup()
+  
+write.csv(extP_load_long, file="Products/Figure9b_data.csv") #saves data table
+fig9b<- ggplot(extP_load_long, aes(x=Yr, y=TotPext_kgday, 
                              fill=Source)) + #separate sources by fill color
   geom_bar(position="stack", stat="identity", color="black") + #stacked bar graph
   scale_fill_manual(values=c("grey", "white", "black")) + #atm = grey, streams=black, other=white
   theme_classic(base_size=12) +
   labs(x="Year", y="External total P loading (kg/yr)")
-ggsave(fig8, file="Products/Figure8.png")
+fig9b #print plot
+ggsave(fig9b, file="Products/Figure9b.png")
 ```
 
 Total P load by source for each year plotted.
 
-b) calculate average daily total P load for CyanoHAB season...
+b) calculating average daily and average annual Other total P loading during the CyanoHAB season...
 
 ```{r}
-extP_load_day<- extP_load %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  summarize(mean=mean(total, na.rm=TRUE), #calculate mean
-            se=(sd(total, na.rm=TRUE)/sqrt(length(total))),
-            min=min(total, na.rm=TRUE),
-            max=max(total, na.rm=TRUE)
+Other_avg<- extP_load %>%
+  summarise(mean=mean(Pother_kgday, #average daily total P loading
+                      na.rm=TRUE),
+            se=(sd(Pother_kgday, na.rm=TRUE)/sqrt(length(Pother_kgday))),
+            min=min(Pother_kgday, na.rm=TRUE),
+            max=max(Pother_kgday, na.rm=TRUE))
+Other_avg
+Other_sumavg<- extP_load %>%
+  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
+  select(Yr, Pother_kgday) %>% #select the fields needed
+  group_by(Yr) %>% #for every year
+  summarize(sum=sum(Pother_kgday)) #add total P load
+Other_sumavg
+mean(Other_sumavg$sum) # print average annual total P loading from other sources
+sd(Other_sumavg$sum)/sqrt(length(Other_sumavg$sum)) #print sd for avg
+```
+
+c) calculate average daily total P load for CyanoHAB season...
+
+```{r}
+Pext_noother_day<- extP_load %>%
+  summarize(mean=mean(Pext_kgday_noother, na.rm=TRUE), #calculate mean
+            se=(sd(Pext_kgday_noother, na.rm=TRUE)/sqrt(length(Pext_kgday_noother))),
+            min=min(Pext_kgday_noother, na.rm=TRUE),
+            max=max(Pext_kgday_noother, na.rm=TRUE)
             )
-extP_load_day
-```
+Pext_noother_day # the estimated daily average P_ext without the P_other
 
-c) calculating average annual total P load for CyanoHAB season...
-
-```{r}
-extP_load_yr<- extP_load %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  group_by(Yr) %>%
-  summarize(sum=sum(total))
-extP_load_yr
-```
-
-The average annual total P load was `r mean(extP_load_yr$sum)` +- 
-`r (sd(extP_load_yr$sum)/sqrt(length(extP_load_yr$sum)))` kg/yr. 
-
-d) calculating average daily P loading from streams
-
-```{r}
-stream_extP_load_day<- extP_load %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  summarize(mean=mean(allInflows_TotP_kgday, na.rm=TRUE), #calculate mean
-            se=(sd(allInflows_TotP_kgday, na.rm=TRUE)/sqrt(length(allInflows_TotP_kgday))),
-            min=min(allInflows_TotP_kgday, na.rm=TRUE),
-            max=max(allInflows_TotP_kgday, na.rm=TRUE)
+Pext_day<- extP_load %>%
+  summarize(mean=mean(Pext_kgday, na.rm=TRUE), #calculate mean
+            se=(sd(Pext_kgday, na.rm=TRUE)/sqrt(length(Pext_kgday))),
+            min=min(Pext_kgday, na.rm=TRUE),
+            max=max(Pext_kgday, na.rm=TRUE)
             )
-stream_extP_load_day
+Pext_day # the estimated daily average  P_ext with P_other
 ```
 
-Average daily P loading from streams calculated.
+Daily average P_ext calculated.
 
-e) calculating total P loading from streams per year...
+d) calculating average annual total P load for CyanoHAB season...
 
 ```{r}
-stream_load_yr<- extP_load %>%
-  filter(Yr>2012 & Yr<=2018) %>% #filter for the study period
+Pext_noother_yr<- extP_load %>%
+  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
   group_by(Yr) %>%
-  summarize(sum=sum(allInflows_TotP_kgday))
-stream_load_yr
-```
+  summarize(sum=sum(Pext_kgday_noother))
+Pext_noother_yr<- Pext_noother_yr %>%
+  summarize(mean=mean(Pext_noother_yr$sum), #print the average annual
+            se=sd(Pext_noother_yr$sum)/sqrt(length(Pext_noother_yr$sum))) #print sd for avg
+Pext_noother_yr #the estimated annual average P_ext without the P_other
 
-The average annual total P load from streams was `r mean(stream_load_yr$sum)` +- 
-`r (sd(stream_load_yr$sum)/sqrt(length(stream_load_yr$sum)))` kg/yr. 
-
-f) calculating average daily P loading from atmospheric deposition...
-
-```{r}
-atm_load_day<- extP_load %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season 
-  filter(Yr>=2012 & Yr<=2018) %>% #filter for the study period
-  summarize(mean=mean(atm_TotP_kgday, na.rm=TRUE), #calculate mean
-            se=(sd(atm_TotP_kgday, na.rm=TRUE)/sqrt(length(atm_TotP_kgday))),
-            min=min(atm_TotP_kgday, na.rm=TRUE),
-            max=max(atm_TotP_kgday, na.rm=TRUE)
-            )
-atm_load_day
-```
-
-Average daily P loading from atmospheric deposition calculated.
-
-g) calculating total P loading from atm per year...
-
-```{r}
-atm_load_yr<- extP_load %>%
-  filter(Yr>2012 & Yr<=2018) %>% #filter for the study period
+Pext_yr<- extP_load %>%
+  mutate(Yr=format(sampledate, "%Y")) %>% #add back in Yr to group data
   group_by(Yr) %>%
-  summarize(sum=sum(atm_TotP_kgday))
-atm_load_yr
+  summarize(sum=sum(Pext_kgday))
+Pext_yr<- Pext_yr %>%
+  summarize(mean=mean(Pext_yr$sum), #print the average annual
+            se=sd(Pext_yr$sum)/sqrt(length(Pext_yr$sum))) #print sd for avg
+Pext_yr #the estimated annual average P_ext with the P_other
 ```
 
-The average annual total P load from streams was `r mean(atm_load_yr$sum)` +- 
-`r (sd(atm_load_yr$sum)/sqrt(length(atm_load_yr$sum)))` kg/yr. 
-
-# Step 4. Save data as new data file:
-
-```{r}
-extP_load<- extP_load %>%
-  filter(daynum>=196 & daynum<=258) %>% #filter for the CyanoHAB season
-  filter(Yr>=2012 & Yr<=2018) #filter for the study period
-write.csv(extP_load, file="Cleaned_data/TotalP_allext.csv")
-```
-
-New data file created with total external P loading.
+Annual average P_ext calculated.
