--- a/Impact_model_method/cyanoHAB_severity.Rmd
+++ b/Impact_model_method/cyanoHAB_severity.Rmd
@@ -19,6 +19,7 @@ library(ggplot2) #needed for plots
 library(ggbreak) #needed for plot scale breaks
 library(dplyr) #needed for reshaping/reformating data
 library(plotly) #needed for 3D plots
+library(zoo) #needed for NA approx function
 ```
 
 Packages loaded.
@@ -99,11 +100,13 @@ Me_Secchi<- Secchi %>%
 a) Plotting Chl-a data available...
 
 ```{r}
-ggplot(data=Me_Chl, aes(x=sampledate, y=Chla_ugL)) + #plots Chl-a across date
+SI_fig3<- ggplot(data=Me_Chl, aes(x=sampledate, y=Chla_ugL)) + #plots Chl-a across date
   geom_point() + #adds points at observations
   geom_line() + #adds lines between 
   theme_classic(base_size=12) +
   labs(x="Date", y="Total Chl-a (ug/L)")
+SI_fig3 #prints out figure
+ggsave("Products/SI_figures/Figure3.png") #saves plot to Products folder
 ```
 
 Chl-a data plotted. Chl-a available from 2008 to 2012, note NAs in 2017.
@@ -122,46 +125,34 @@ b<- ggplot(data=Me_cyanoRB, aes(x=sampledate, y=CD_cellsmL/1000))+
   geom_line() + #lines between points
   theme_classic(base_size=12)+
   labs(x="Date", y="Cyanobacteria Density (10^3 cells/mL)")
-a / b #plot a over plot b
+SI_fig4<- a / b #plot a over plot b
+SI_fig4 #prints out figure
+ggsave("Products/SI_figures/Figure4.png") #saves plot to Products folder
 ```
 
 CRB and CD data plotted. 
 
-c) plotting Secchi depth (SD)...
-
-```{r}
-ggplot(data=Me_Secchi, aes(x=sampledate, y=SD_m)) + #plots Chl-a across date
-  geom_point() + #adds points at observations
-  geom_line() + #adds lines between 
-  theme_classic(base_size=12) +
-  scale_y_reverse() + #flips y axis to depth of lake
-  labs(x="Date", y="Secchi disk depth (m)")
-```
-
-Secchi depth plotted. Note, y-axis reversed as limnological plot.
-
-d) plotting Secchi depth and cyanobacteria relative biovolume to get cyanoHAB
+c) plotting Secchi depth and cyanobacteria relative biovolume to get cyanoHAB
 season...
 
 ```{r}
-Me_Secchi_fig3<- Me_Secchi %>%
+Me_Secchi_fig2<- Me_Secchi %>%
   select(sampledate, SD_m) #select fields of interest
-Me_cyanoRB_fig3<- Me_cyanoRB %>%
+Me_cyanoRB_fig2<- Me_cyanoRB %>%
   select(sampledate, Yr, daynum, relbiovol) #selects fields of interest
-Figure3_data<- merge(Me_Secchi_fig3, Me_cyanoRB_fig3, by=c("sampledate"),
+Figure2_data<- merge(Me_Secchi_fig2, Me_cyanoRB_fig2, by=c("sampledate"),
                        all=TRUE) #merges data frames and keeps all records
-write.csv(Figure3_data, file="Products/Figure3_data.csv")
-a<- ggplot(data=Figure3_data, aes(x=daynum, y=SD_m)) + #plots SD across day
+write.csv(Figure2_data, file="Products/Figure2_data.csv")
+a<- ggplot(data=Figure2_data, aes(x=daynum, y=SD_m)) + #plots SD across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
-  scale_y_reverse() +
   geom_smooth() + #adds regression curve
   labs(x="Day of year", y="Secchi depth (m)") +
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-b <- ggplot(data=Figure3_data, aes(x=daynum, y=relbiovol)) + #plots cyano RB across day
+           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+b <- ggplot(data=Figure2_data, aes(x=daynum, y=relbiovol)) + #plots cyano RB across day
   geom_point() + #plots observations as points
   theme_classic(base_size=12) +
   geom_smooth() + #adds regression curve
@@ -169,10 +160,11 @@ b <- ggplot(data=Figure3_data, aes(x=daynum, y=relbiovol)) + #plots cyano RB acr
        y="Cyanobacteria relative biovolume 
        (as % total phytoplankton biovolume)") +
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+           xmin=-Inf, xmax=196, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
-a / b #plot a over plot b
+           xmin=258, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+fig2<- a / b #plot a over plot b
+fig2 #print out plot
 ggsave("Products/Figure2_color.png") #saves plot to Products folder
 ```
 
@@ -187,7 +179,7 @@ Yr<- seq(from=2012, #define year start of study period
              by=1) #creates a sequence every 1 year
 Yr #prints the expected years of data
 daynum_bins<- seq(from=196, #define date start of CyanoHAB season
-                  to=252, #define date end of CyanoHAB season
+                  to=258, #define date end of CyanoHAB season
                   by=14) #creates a sequence every 14 days 
 daynum_bins #prints the expected observation dates of data
 Me_phyto<- data.frame(Yr=rep(Yr, each=5), daynum_bin=rep(daynum_bins, times=7)) #create data frame with expected year and day number
@@ -200,7 +192,7 @@ b) binning Chl observed dates into expected dates...
 ```{r}
 Me_Chl <- Me_Chl  %>%
   filter(Yr>=2012 & Yr<=2018) %>% #filter for study years
-  filter(daynum >=189 & daynum <=259) %>% #filter for CyanoHAB season +- 7 days
+  filter(daynum >=189 & daynum <=265) %>% #filter for CyanoHAB season +- 7 days
   mutate(daynum_bin=
          ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
                 daynum_bins[1], #yes returns bin 1
@@ -229,7 +221,7 @@ b) binning CD observed dates into expected dates...
 ```{r}
 Me_cyanoRB <- Me_cyanoRB  %>% 
   filter(Yr>=2012 & Yr<=2018) %>% #filter for study years
-  filter(daynum >=189 & daynum <=259) %>% #filter for CyanoHAB season +- 7 days
+  filter(daynum >=189 & daynum <=265) %>% #filter for CyanoHAB season +- 7 days
   mutate(daynum_bin=
          ifelse(daynum<(daynum_bins[2]-7), #if observation is <= bin 2 min
                 daynum_bins[1], #yes returns bin 1
@@ -278,67 +270,17 @@ Me_phyto$CD_cellsmL<- na.approx(Me_phyto$CD_cellsmL) #interpolates NAs
 
 Missing values interpolated.
 
-# Step 6. Summarize and view the data:
-
-a) Plot Chl-a by day of year...
-
-```{r}
-ggplot(data=subset(Me_phyto, !Yr==2017), #note all data in 2017 were zeroed due 
-       #to failing QA from source
-       aes(x=daynum_bin,y=Chla_ugL)) + 
-  geom_point()+ #adds points 
-  geom_line() + #adds lines between points
-  facet_wrap(~Yr) +
-  labs(title="Epilimnion (depth <= 8 m) Lake Mendota, WI", #add title
-       x="Day of Year", #add x axis label
-       shape="Year", #add legend label as year
-       y="Extracted Chl-a (ug/L)", #add y axis label
-       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
-  theme_classic(base_size=12)+
-  #scale_color_continuous(name="Year")+ #adds color scale for year
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=0, ymax=12, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=12, ymax=50, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
-           ymin=50, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-```
-
-b) Plot CD by day of year...
-
-```{r}
-ggplot(data=Me_phyto, 
-       aes(x=daynum_bin, y=CD_cellsmL)) + 
-  geom_point()+ #colors points by year
-  geom_line()+
-  facet_wrap(~Yr) +
-  labs(title = "Epilimnion (depth <= 8 m) Lake Mendota, WI", #adds title
-       x="Day of Year", #adds x-axis label
-       shape="Year",
-       y="Cyanobacteria Density (cells/mL)", #adds y-xis label
-       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
-  theme_classic(base_size=12)+
-  #scale_color_continuous(name="Year")+ #adds color scale for year
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=0, ymax=20000, alpha=.2, fill='green') + #low/no CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=20000, ymax=100000, alpha=.2, fill='orange')+ #moderate CyanoHAB
-  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
-           ymin=100000, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
-```
-
 # Step 6. Save as new data file:
 
 ```{r}
 write.csv(Me_phyto, file="Cleaned_data/cyanoHAB_severity.csv")
 ```
 
-# Supplemental Figures:
+# Step 7. Summarize and view the data:
 
-## Figure 14. 3D plot of Chl-a across day number and year...
+a) 3D plot of Chl-a across day number and year...
 
 ```{r}
-Chl<- read.csv(file="Original_data/ntl38_v5_chl.csv", header=TRUE)
 Me_Chl<- Chl %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
          Chla_ugL= tri_chl_spec, #renames field to common name with units
@@ -367,22 +309,22 @@ Chla_interp<- Chla_interp %>%
          ) %>%
   filter(Yr>=2012 & Yr<=2018) #filter for study period
 
-fig14<- plot_ly(x=Chla_interp$Yr, 
+SI_fig5a<- plot_ly(x=Chla_interp$Yr, 
   y=Chla_interp$daynum, 
   z=Chla_interp$Chla_ugL, 
   type="scatter3d", mode="markers",
   color=Chla_interp$Chla_ugL)
-fig14<- fig14 %>%
+SI_fig5a<- SI_fig5a %>%
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Chlorophyll-a (ug/L)")))
-fig14
+SI_fig5a #prints the plot
+ggsave("Products/SI_figures/Figure5a_color.png") #saves plot to Products folder
 ```
 
-## Figure 15. 3D plot of CD across day number and year...
+b) 3D plot of CD across day number and year...
 
 ```{r}
-phyto<-read.csv(file="Original_data/ntl88_v13_phytoplankton.csv", header=TRUE) #has the phytoplankton community dataset
 Me_cyanoRB<- phyto %>%
   mutate(sampledate=as.Date(sampledate, origin="1899-12-30")) %>% #tells R to format field as Datey
   filter(lakeid=="ME", #filter for Lake Mendota data
@@ -414,14 +356,67 @@ CD_interp<- CD_interp %>%
          ) %>%
   filter(Yr>=2012 & Yr<=2018) #filter for study period
 
-fig15<- plot_ly(x=CD_interp$Yr, 
+SI_fig5b<- plot_ly(x=CD_interp$Yr, 
   y=CD_interp$daynum, 
   z=CD_interp$CD_cellsmL, 
   type="scatter3d", mode="markers",
   color=CD_interp$CD_cellsmL)
-fig15<- fig15 %>%
+SI_fig5b<- SI_fig5b %>%
   layout(scene=list(xaxis=list(title="Year"),
          yaxis=list(title="Day of Year"),
          zaxis=list(title="Cyanobacteria Density (cells/mL)")))
-fig15
+SI_fig5b #prints the figure
+ggsave("Products/SI_figures/Figure5b_color.png") #saves plot to Products folder
 ```
+
+c) Plot CyanoHAB severity, using Chl-a by day of year...
+
+```{r}
+SI_fig6<- ggplot(data=subset(Me_phyto, !Yr==2017), #note all data in 2017 were zeroed due 
+       #to failing QA from source
+       aes(x=daynum_bin,y=Chla_ugL)) + 
+  geom_point()+ #adds points 
+  geom_line() + #adds lines between points
+  facet_wrap(~Yr) +
+  labs(title="Epilimnion (depth <= 8 m) Lake Mendota, WI", #add title
+       x="Day of Year", #add x axis label
+       shape="Year", #add legend label as year
+       y="Extracted Chl-a (ug/L)", #add y axis label
+       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
+  theme_classic(base_size=12)+
+  #scale_color_continuous(name="Year")+ #adds color scale for year
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
+           ymin=0, ymax=12, alpha=.2, fill='green') + #low/no CyanoHAB
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
+           ymin=12, ymax=50, alpha=.2, fill='orange')+ #moderate CyanoHAB
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin), 
+           ymin=50, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
+SI_fig6 #prints out figure
+ggsave("Products/SI_figures/Figure6_color.png") #saves plot to Products folder
+```
+
+d) Plot CD by day of year...
+
+```{r}
+SI_fig7<- ggplot(data=Me_phyto, 
+       aes(x=daynum_bin, y=CD_cellsmL)) + 
+  geom_point()+ #colors points by year
+  geom_line()+
+  facet_wrap(~Yr) +
+  labs(title = "Epilimnion (depth <= 8 m) Lake Mendota, WI", #adds title
+       x="Day of Year", #adds x-axis label
+       shape="Year",
+       y="Cyanobacteria Density (cells/mL)", #adds y-xis label
+       caption="Color coding along y-axis indicates CyanoHAB severity (green = low, orange = moderate, red = severe).") + #add caption for notation
+  theme_classic(base_size=12)+
+  #scale_color_continuous(name="Year")+ #adds color scale for year
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
+           ymin=0, ymax=20000, alpha=.2, fill='green') + #low/no CyanoHAB
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
+           ymin=20000, ymax=100000, alpha=.2, fill='orange')+ #moderate CyanoHAB
+  annotate('rect', xmin=min(Me_phyto$daynum_bin), xmax=max(Me_phyto$daynum_bin),
+           ymin=100000, ymax=Inf, alpha=.2, fill='red') #severe CyanoHAB
+SI_fig7 #prints out figure
+ggsave("Products/SI_figures/Figure7_color.png") #saves plot to Products folder
+```
+
